fixed firefox issue where the social icons were rendering too large

--- a/src/css/technology-list.css
+++ b/src/css/technology-list.css
@@ -19,6 +19,8 @@ path {
 .tech-svg {
     padding: 20px;
     min-width: 155px;
+    max-width: 165px;
+
 }
 
 
